--- a/esheep_sdk/example/medusa/algorithm1/configurations/dqn_conf_1001.ini
+++ b/esheep_sdk/example/medusa/algorithm1/configurations/dqn_conf_1001.ini
@@ -1,8 +1,7 @@
 [DQN]
 ### experiment ###
 GPU_INDEX = 0
-PRE_TRAIN_MODEL_FILE = /home/wangxicheng/medusa/sdk/esheep-sdk/model/net_dqn_model_100120190122_110318_20190122_144939.model
-# PRE_TRAIN_MODEL_FILE = D:\data\\rl\\model\\net_bko_dqn_20180905_232642_20180907_063819.model
+PRE_TRAIN_MODEL_FILE
 EPOCH_NUM = 360
 EPOCH_LENGTH = 30000
 
@@ -11,8 +10,8 @@ GAME_NAME = medusa
 ACTION_NUM = 5
 OBSERVATION_TYPE = gray
 CHANNEL = 7
-WIDTH = 400
-HEIGHT = 200
+WIDTH = 200
+HEIGHT = 100
 
 ### player ###
 TRAIN_PER_STEP = 4
@@ -44,7 +43,7 @@ POSITIVE_REWARD = 0.1
 NEGATIVE_REWARD = -1
 
 ### OTHER ###
-MODEL_PATH = /home/wangxicheng/medusa/sdk/esheep-sdk
+MODEL_PATH = /Users/sky/PycharmProjects/esheep-sdk/model
 MODEL_FILE_MARK = dqn_model_1001
 
 EDITED_TIME = 2018-9-26 10:47:06
