--- a/esheep_sdk/example/medusa/algorithm1/configurations/dqn_conf_1001.ini
+++ b/esheep_sdk/example/medusa/algorithm1/configurations/dqn_conf_1001.ini
@@ -1,6 +1,6 @@
 [DQN]
 ### experiment ###
-GPU_INDEX = 0
+GPU_INDEX = 2
 PRE_TRAIN_MODEL_FILE
 EPOCH_NUM = 360
 EPOCH_LENGTH = 30000
@@ -9,7 +9,7 @@ EPOCH_LENGTH = 30000
 GAME_NAME = medusa
 ACTION_NUM = 5
 OBSERVATION_TYPE = gray
-CHANNEL = 7
+CHANNEL = 4
 WIDTH = 200
 HEIGHT = 100
 
@@ -43,7 +43,8 @@ POSITIVE_REWARD = 0.1
 NEGATIVE_REWARD = -1
 
 ### OTHER ###
-MODEL_PATH = /Users/sky/PycharmProjects/esheep-sdk/model
+;MODEL_PATH = /Users/sky/PycharmProjects/esheep-sdk/model
+MODEL_PATH = /home/caoshenkai/medusa/esheep-sdk/model
 MODEL_FILE_MARK = dqn_model_1001
 
 EDITED_TIME = 2018-9-26 10:47:06
